# ashbot

./: Procfile  pyproject.toml
manibot/: app.py
manibot/action/: dice.py  mordheim.py  sync.py
manibot/infra/: ashbot.py
